--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
 .venv/
 .env*
 .*
+__pycache__/
+
+base/migrations/
+base/__pycache__/
+
+crm/migrations/
+crm/__pycache__/
+
+portal/migrations/
+portal/__pycache__/
