--- a/requirements.txt
+++ b/requirements.txt
@@ -1,41 +1,9 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.4
+aiosignal==1.3.2
 argcomplete==3.5.3
 asgiref==3.8.1
-babel==2.16.0
-beautifulsoup4==4.12.3
-bootstrap-admin==0.4.4
-bs4==0.0.2
-certifi==2024.12.14
-charset-normalizer==3.4.1
-click==8.1.8
-Django==5.1.4
-django-allauth==65.3.0
-django-axes==7.0.1
-django-countries==7.6.1
-django-queryset-csv==1.1.0
-django-widget-tweaks==1.5.0
-gunicorn==23.0.0
-html5lib==1.1
-idna==3.10
-libsass==0.23.0
-packaging==24.2
-pillow==11.1.0
-platformdirs==4.3.6
-polib==1.2.0
-psycopg2-binary==2.9.10
-python-slugify==8.0.4
-requests==2.32.3
-six==1.17.0
-soupsieve==2.6
-sqlparse==0.5.3
-text-unidecode==1.3
-tinycss2==1.4.0
-typing_extensions==4.12.2
-unicodecsv==0.14.1
-urllib3==2.3.0
-userpath==1.9.2
-webencodings==0.5.1
-argcomplete==3.5.3
-asgiref==3.8.1
+attrs==25.3.0
 babel==2.16.0
 beautifulsoup4==4.12.3
 bootstrap-admin==0.4.4
@@ -50,14 +18,19 @@ django-countries==7.6.1
 django-queryset-csv==1.1.0
 django-widget-tweaks==1.5.0
 dotenv==0.9.9
+frozenlist==1.6.0
+geoip2==5.1.0
 gunicorn==23.0.0
 html5lib==1.1
 idna==3.10
 libsass==0.23.0
+maxminddb==2.7.0
+multidict==6.4.4
 packaging==24.2
 pillow==11.1.0
 platformdirs==4.3.6
 polib==1.2.0
+propcache==0.3.1
 psycopg2-binary==2.9.10
 python-dotenv==1.1.0
 python-slugify==8.0.4
@@ -72,3 +45,4 @@ unicodecsv==0.14.1
 urllib3==2.3.0
 userpath==1.9.2
 webencodings==0.5.1
+yarl==1.20.0
